tests/errors/sem.expected-expression.call-arg.or
main :: () -> void {
    add :: (a: sint, b := 2) -> sint {
        return b;
    };

    add(,);
};
